--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ atty = "0.2.14"
 failure = "0.1.8"
 serde = {version = "1.0.114", features = ["derive"]}
 toml = "0.5.6"
+rayon = "1.3.1"
+itertools = "0.9.0"
